001 - initial layout | Set SCSS

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "rm": "rimraf ./dist",
     "build": "npm run rm && webpack --mode=production",
-    "start": "webpack --watch --mode=development",
+    "dev": "webpack --watch --mode=development",
     "test": "y"
   },
   "repository": {
